Resolve issue where ships were appearing behind cells

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -78,7 +78,9 @@ footer {
 .ship {
     height: 100%;
     pointer-events: none;
+    position: relative;
     transform-origin: 20px;
+    z-index: 1;
 }
 
 .carrier {
